Updates tab titles when within tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,9 @@
 bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
 
+# where you at?
+set-option -g set-titles on
+set-option -g set-titles-string '#(pwd | sed s:$HOME:~: | tail -c 13 )'
+
 # c-space for prefix
 unbind C-b
 set -g prefix C-Space
