Adds an initial stab at displaying $PWD as tab title in tmux.conf.

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@ bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
 
 # where you at?
 set-option -g set-titles on
-set-option -g set-titles-string '#(pwd | sed s:$HOME:~: | tail -c 13 )'
+set-option -g set-titles-string '#(pwd | sed s:$HOME:~: | tail -c 13 )' # could be better...
 
 # c-space for prefix
 unbind C-b
