Opens new split panes in current pane's directory.

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,11 +13,11 @@ bind Space copy-mode
 bind C-Space copy-mode
 
 # open new vertical and horizontal panes with j and l, respectively
-bind l split-window -h
-bind C-l split-window -h
+bind l split-window -h -c "#{pane_current_path}"
+bind C-l split-window -h -c "#{pane_current_path}"
 
-bind j split-window -v
-bind C-j split-window -v
+bind j split-window -v -c "#{pane_current_path}"
+bind C-j split-window -v -c "#{pane_current_path}"
 
 # ...and resize them with M-[hjkl]
 bind -r M-h resize-pane -L 5
