Fixes some tmux settings: use zsh, fix `open`

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,8 @@
 bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
 
+# nuts to you, bash
+set-option -g default-shell /bin/zsh
+
 # where you at?
 set-option -g set-titles on
 set-option -g set-titles-string '#(pwd | sed s:$HOME:~: | tail -c 13 )' # could be better...
@@ -7,6 +10,9 @@ set-option -g set-titles-string '#(pwd | sed s:$HOME:~: | tail -c 13 )' # could 
 # c-space for prefix
 unbind C-b
 set -g prefix C-Space
+
+# `open` fix, cf. https://superuser.com/questions/831028/lsopenurlswithrole-failes-with-error-10810-on-yosemite-from-within-tmux
+set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 
 # enter copy-mode with space
 bind Space copy-mode
