Add powerline tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,8 +4,12 @@ bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
 set-option -g default-shell /bin/zsh
 
 # where you at?
-set-option -g set-titles on
-set-option -g set-titles-string '#(pwd | sed s:$HOME:~: | tail -c 13 )' # could be better...
+# set-option -g set-titles on
+# set-option -g set-titles-string '#(pwd | sed s:$HOME:~: | tail -c 13 )' # could be better...
+
+# Powerline setup
+run-shell "powerline-daemon -q"
+source "/Library/Python/2.7/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # c-space for prefix
 unbind C-b
