Vimify tmux copy mode by binding v, y, & p

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,10 @@ set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 # enter copy-mode with space
 bind Space copy-mode
 bind C-Space copy-mode
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
 
 # open new vertical and horizontal panes with j and l, respectively
 bind l split-window -h -c "#{pane_current_path}"
