Use s(plit) and v(ertical split) for new panes
Using prefix-j and -l was great for directional simplicity, but keeping
prefix-l free to toggle last panes is too enticing.

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,12 +26,12 @@ bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
-# open new vertical and horizontal panes with j and l, respectively
-bind l split-window -h -c "#{pane_current_path}"
-bind C-l split-window -h -c "#{pane_current_path}"
+# open new vertical and horizontal panes with s and v, respectively
+bind v split-window -h -c "#{pane_current_path}"
+bind C-v split-window -h -c "#{pane_current_path}"
 
-bind j split-window -v -c "#{pane_current_path}"
-bind C-j split-window -v -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
+bind C-s split-window -v -c "#{pane_current_path}"
 
 # ...and resize them with M-[hjkl]
 bind -r M-h resize-pane -L 5
