Fix prefix-l toggle between last windows
It's so dang convenient to be able to toggle between two windows.
Definitely deserves home row real estate.

* binds v and s to vertical and horizontal split panes
* binds l to toggle-window

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,9 +27,10 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
 # open new vertical and horizontal panes with s and v, respectively
+unbind v
 bind v split-window -h -c "#{pane_current_path}"
 bind C-v split-window -h -c "#{pane_current_path}"
-
+unbind s
 bind s split-window -v -c "#{pane_current_path}"
 bind C-s split-window -v -c "#{pane_current_path}"
 
@@ -38,6 +39,9 @@ bind -r M-h resize-pane -L 5
 bind -r M-j resize-pane -D 5
 bind -r M-k resize-pane -U 5
 bind -r M-l resize-pane -R 5
+
+# toggle latest windows with l
+bind l last-window
 
 # confirm-before got old fast
 bind x kill-pane
