Minor tweaks to hella shit

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+set -g default-terminal "screen-256color"
+
 bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
 
 # nuts to you, bash
@@ -17,6 +19,9 @@ set -g prefix C-Space
 
 # `open` fix, cf. https://superuser.com/questions/831028/lsopenurlswithrole-failes-with-error-10810-on-yosemite-from-within-tmux
 set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+
+# vim copy mode
+setw -g mode-keys vi
 
 # enter copy-mode with space
 bind Space copy-mode
@@ -45,6 +50,9 @@ bind l last-window
 
 # confirm-before got old fast
 bind x kill-pane
+
+# extract current pane to separate window
+bind b break-pane
 
 # yank to system clipboard with y from copy-mode
 bind-key -t vi-copy y \
