mouse support for yon tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,11 @@ set-option -g default-shell /bin/zsh
 run-shell "powerline-daemon -q"
 source "/Library/Python/2.7/site-packages/powerline/bindings/tmux/powerline.conf"
 
+# Mouse support! Requires copy-mode to be on for scrolling
+set -g mouse on
+# Start copy mode when scrolling up - doesn't work properly in iterm
+# bind -n WheelUpPane copy-mode
+
 # c-space for prefix
 unbind C-b
 set -g prefix C-Space
