Add some post-powerline tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,18 +5,12 @@ bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
 # nuts to you, bash
 set-option -g default-shell /bin/zsh
 
-# where you at?
-# set-option -g set-titles on
-# set-option -g set-titles-string '#(pwd | sed s:$HOME:~: | tail -c 13 )' # could be better...
-
-# Powerline setup
-run-shell "powerline-daemon -q"
-source "/Library/Python/2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+set-option -g status-bg '#777777'
+set-option -g status-fg '#bbbbbb'
+set-option -g status-right " #(date '+%a, %b %d   %I:%M')    #(battery -t) "
 
 # Mouse support! Requires copy-mode to be on for scrolling
 set -g mouse on
-# Start copy mode when scrolling up - doesn't work properly in iterm
-# bind -n WheelUpPane copy-mode
 
 # c-space for prefix
 unbind C-b
