--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,8 @@ set-option -g default-shell /bin/zsh
 
 set-option -g status-bg '#777777'
 set-option -g status-fg '#bbbbbb'
-set-option -g status-right " #(date '+%a, %b %d   %I:%M')    #(battery -t) "
+set-option -g status-right-length 100
+set-option -g status-right " #[fg=yellow]#(~/.dotfiles/bin/now_playing | cut -c 1-67)#[default]   #(date '+%a, %b %d  %I:%M')   #(battery -t) "
 
 # Mouse support! Requires copy-mode to be on for scrolling
 set -g mouse on
