fixup! Embed tmux color codes in now_playing & prefix filename

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@ set-option -g history-limit 4000
 set-option -g status-bg '#777777'
 set-option -g status-fg '#bbbbbb'
 set-option -g status-right-length 100
-set-option -g status-right " #[fg=yellow]#(~/.dotfiles/bin/now_playing | cut -c 1-67)#[default]   #(date '+%a, %b %d  %I:%M')   #(battery -t) "
+set-option -g status-right "#(~/.dotfiles/bin/tmux--now_playing | cut -c 1-67)#[default]   #(date '+%a, %b %d  %I:%M')   #(battery -t) "
 
 set -g mouse on
 
