Update tmux mouse config for new version

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,7 @@ set-option -g status-right-length 100
 set-option -g status-right-style 'bg=#777777,fg=#999999'
 set-option -g status-right "#(~/.dotfiles/bin/tmux--now_playing | cut -c 1-67)#[default]   #(date '+%m/%d/%y  %I:%M')   #(battery -t) "
 
-set -g mouse on
+set -g mouse
 
 # c-space for prefix
 unbind C-b
