--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,7 @@ bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
 set-option -g default-shell /bin/zsh
 
 set-option -g history-limit 4000
+set-option -sg escape-time 10
 
 set-option -g status-bg '#777777'
 set-option -g status-fg '#bbbbbb'
