Prettier, subtler terminal colors

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,15 +8,15 @@ set-option -g default-shell /bin/zsh
 set-option -g history-limit 4000
 set-option -sg escape-time 10
 
-set-option -g status-bg '#777777'
+set-option -g status-bg '#444444'
 set-option -g status-fg '#bbbbbb'
 set-option -g window-status-format ' #I: #W '
 
-set-option -g window-status-last-style 'bg=#666666,fg=#bbbbbb'
+set-option -g window-status-last-style 'bg=#4a4a4a,fg=#999999'
 
 set-option -g window-status-current-format ' #I: #W '
-set-option -g window-status-current-bg '#444444'
-set-option -g window-status-current-fg green
+set-option -g window-status-current-bg '#5f5f5f'
+set-option -g window-status-current-fg yellow
 
 set-option -g status-left ' #S '
 set-option -g status-left-length 20
@@ -24,7 +24,7 @@ set-option -g status-left-fg black
 set-option -g status-left-bg yellow
 
 set-option -g status-right-length 100
-set-option -g status-right-style 'bg=#777777,fg=#999999'
+set-option -g status-right-style 'bg=#4b4b4b,fg=#999999'
 set-option -g status-right "#(~/.dotfiles/bin/tmux--now_playing | cut -c 1-67)#[default]   #(date '+%m/%d/%y  %I:%M')   #(battery -t) "
 
 set -g mouse
