Rebind horizontal splits to "h" to reenable switching sessions with "s"

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,9 +51,8 @@ bind-key -t vi-copy 'y' copy-selection
 unbind v
 bind v split-window -h -c "#{pane_current_path}"
 bind C-v split-window -h -c "#{pane_current_path}"
-unbind s
-bind s split-window -v -c "#{pane_current_path}"
-bind C-s split-window -v -c "#{pane_current_path}"
+unbind h
+bind h split-window -v -c "#{pane_current_path}"
 
 # ...and resize them with M-[hjkl]
 bind -r M-h resize-pane -L 5
