fix vim keybinding for copy mode in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,8 +44,8 @@ bind Space copy-mode
 bind C-Space copy-mode
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 
 # open new vertical and horizontal panes with s and v, respectively
 unbind v
@@ -70,8 +70,8 @@ bind x kill-pane
 bind b break-pane
 
 # yank to system clipboard with y from copy-mode
-bind-key -t vi-copy y \
-  copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y \
+  send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # vim-tmux-navigator setup
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$|emacs.*$"'
