--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,7 @@ bind r source-file ~/.tmux.conf \; display "Tmux config reloaded!"
 # nuts to you, bash
 set-option -g default-shell /bin/zsh
 
-set-option -g history-limit 4000
+set-option -g history-limit 10000
 set-option -sg escape-time 10
 
 set-option -g status-bg '#444444'
@@ -27,7 +27,7 @@ set-option -g status-right-length 100
 set-option -g status-right-style 'bg=#4b4b4b,fg=#999999'
 set-option -g status-right "#(~/.dotfiles/sbin/tmux--now_playing | cut -c 1-67)#[default]   #(date '+%m/%d/%y  %I:%M')   #(battery -t) "
 
-set-option -g mouse
+set-option -g mouse on
 
 # c-space for prefix
 unbind C-b
@@ -74,9 +74,7 @@ bind-key -T copy-mode-vi y \
   send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # vim-tmux-navigator setup
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$|emacs.*$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)n?vim(diff)?$|emacs.*$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)n?vim(diff)?$|emacs.*$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)n?vim(diff)?$|emacs.*$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)n?vim(diff)?$|emacs.*$' && tmux send-keys C-l) || tmux select-pane -R"
